fix:alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -825,7 +825,10 @@ small {
     margin-bottom: 2rem;
     margin-left: 0.5rem;
   }
-
+  .bluebox-learnMore {
+    margin-left: 0rem;
+    margin-right: 6rem;
+  }
   .market-heading,
   .we-serve-heading {
     font-weight: bolder;
